--- a/vibecheck_adv/.env
+++ b/vibecheck_adv/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://koushik:koushik123@cluster0.mmwkopi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=my url of mongo db
 JWT_SECRET=your_jwt_secret
 JWT_EXPIRE=30d
